--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4026,11 +4026,11 @@ input[type="submit"].btn.btn-mini {
   padding-right: 20px;
   padding-left: 20px;
   background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
-  background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
-  background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
-  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
+  background-image: -moz-linear-gradient(top, #036e16 0%, #004f0a 100%);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#036e16), to(#004f0a));
+  background-image: -webkit-linear-gradient(top, #036e16 0%, #004f0a 100%);
+  background-image: -o-linear-gradient(top, #036e16, #004f0a);
+  background-image: linear-gradient(to bottom, #036e16, #004f0a);
   background-repeat: repeat-x;
   border: 1px solid #d4d4d4;
   -webkit-border-radius: 4px;
@@ -4057,7 +4057,7 @@ input[type="submit"].btn.btn-mini {
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
-  color: #555555;
+  color: #fafafa;
   text-shadow: 0 1px 0 #ffffff;
 }
 
