--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4025,7 +4025,7 @@ input[type="submit"].btn.btn-mini {
   min-height: 40px;
   padding-right: 20px;
   padding-left: 20px;
-  background-color: #fafafa;
+  background-color: #006b08;
   background-image: -moz-linear-gradient(top, #036e16 0%, #004f0a 100%);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#036e16), to(#004f0a));
   background-image: -webkit-linear-gradient(top, #036e16 0%, #004f0a 100%);
@@ -4417,7 +4417,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-inner {
-  background-color: #1b1b1b;
+  background-color: #1c1c1c;
   background-image: -moz-linear-gradient(top, #222222, #111111);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
   background-image: -webkit-linear-gradient(top, #222222, #111111);
