--- a/css/header.css
+++ b/css/header.css
@@ -82,14 +82,15 @@ a {
 	display: inline-block;
 	position: relative;
 	width: 60px;
+	height: 20px;
 	padding-top: 5px;
 	padding-bottom: 7px;
-	border-radius: 10px 10px 0px 0px;
+	border-radius: 10px;
 	-webkit-border-radius: 10px 10px 0px 0px;
 	-moz-border-radius: 10px 10px 0px 0px;
-	behavior: url(/~alex/Harbinger2/pie/PIE.htc);
 	margin-left: 2px;
 	margin-right: 2px;
+	behavior: url(/~alex/Harbinger2/pie/border-radius.htc);
 }
 
 .nav_buttons li:hover {
