--- a/css/header.css
+++ b/css/header.css
@@ -121,7 +121,7 @@ a {
 #installgcf {
 	width: 100%;
 	height: 35px;
-	background: yellow;
+	background: #ffe102;
 	display: none;
 	text-align: center;
 }
@@ -135,4 +135,9 @@ a {
 	position: relative;
 	bottom: 7px;
 	left: 10px;
+}
+
+#installgcf a {
+	color: black;
+	text-decoration: none;
 }
