--- a/css/footer.css
+++ b/css/footer.css
@@ -52,3 +52,11 @@ h3.footer {
 #abt_chrome {
 	width: 400px;
 }
+
+#title a {
+	text-decoration: none;
+}
+
+#title a:hover {
+	text-decoration: underline !important;
+}
