--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4277,13 +4277,13 @@ input[type="submit"].btn.btn-mini {
   margin-left: 5px;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #ededed;
-  *background-color: #e5e5e5;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f2f2f2), to(#e5e5e5));
-  background-image: -webkit-linear-gradient(top, #f2f2f2, #e5e5e5);
-  background-image: -o-linear-gradient(top, #f2f2f2, #e5e5e5);
-  background-image: linear-gradient(to bottom, #f2f2f2, #e5e5e5);
-  background-image: -moz-linear-gradient(top, #f2f2f2, #e5e5e5);
+  background-color: #00570d;
+  *background-color: #00570d;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#004400), to(#00430a));
+  background-image: -webkit-linear-gradient(top, #004400 0%, #00430a 100%);
+  background-image: -o-linear-gradient(top, #004400, #00430a);
+  background-image: linear-gradient(to bottom, #004400, #00430a);
+  background-image: -moz-linear-gradient(top, #004400, #00430a);
   background-repeat: repeat-x;
   border-color: #e5e5e5 #e5e5e5 #bfbfbf;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -4300,8 +4300,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .btn-navbar.disabled,
 .navbar .btn-navbar[disabled] {
   color: #ffffff;
-  background-color: #e5e5e5;
-  *background-color: #d9d9d9;
+  background-color: rgba(230,230,230,0);
+  *background-color: rgba(217,217,217,0);
 }
 
 .navbar .btn-navbar:active,
