--- a/sports/css.css
+++ b/sports/css.css
@@ -31,11 +31,29 @@ li#sports {
 #sportsbox li {
 	display: inline-block;
 	width: 100px;
-	background: cyan;
+	color: white;
+	background: rgb(70,104,67);
 }
 
 #fall {
 	margin-left: -40px;
+	display: block;
+	height: 20px;
+	border-radius: 15px 0px 0px 15px;
+	border: 1px solid #629b63;
+}
+
+#winter {
+	display: block;
+	height: 20px;
+	border: 1px solid #629b63;
+}
+
+#spring {
+	display: block;
+	height: 20px;
+	border-radius: 0px 15px 15px 0px;
+	border: 1px solid #629b63;
 }
 
 .box {
@@ -51,6 +69,7 @@ li#sports {
 	background: #d9d9d9;
 	width: 200px;
 	height: 150px;
+	border-radius: 8px;
 }
 
 .sport h3 {
@@ -64,6 +83,8 @@ li#sports {
 	position: absolute;
 	left: 25px;
 	top: 12px;
+	border-radius: 5px;
+	border: 1px solid black;
 }
 
 #sportsbox p {
