--- a/css/all.css
+++ b/css/all.css
@@ -31,8 +31,7 @@ html, body {
 #content {
 	min-height: 100%;
 	height: 100%;
-	height: auto !important;
-	margin-bottom: -200px !important;
+	margin-bottom: -200px;
 }
 
 #footer_spacer {
