--- a/css/all.css
+++ b/css/all.css
@@ -34,9 +34,14 @@ html, body {
 	margin-bottom: -200px;
 }
 
+#footer_spacer {
+	height: 200px;
+	clear: both;
+}
+
 #footer {
 	width: 100%;
-	min-height: 200px;
+	height: 200px;
 	background: rgb(70,104,67);
 	clear: both;
 }
