--- a/css/all.css
+++ b/css/all.css
@@ -30,8 +30,8 @@ html, body {
 
 #content {
 	min-height: 100%;
-	height: 100%;
 	margin-bottom: -200px;
+	clear: both;
 }
 
 #footer_spacer {
@@ -41,7 +41,7 @@ html, body {
 
 #footer {
 	width: 100%;
-	height: 200px;
+	min-height: 200px;
 	background: rgb(70,104,67);
 	clear: both;
 }
