--- a/css.css
+++ b/css.css
@@ -66,7 +66,7 @@ a.fancy {
 	padding: 0px;
 	width: 100%;
 	height: 435px;
-	background: #5b5b5b;
+	background: #5e5e5e;
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
 	margin-bottom: 20px;
