--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4280,8 +4280,8 @@ input[type="submit"].btn.btn-mini {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #158125;
-  *background-color: #00570d;
-  /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#004400), to(#00430a));
+  *background-color: #00580d;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#004400), to(#00430a));
   background-image: -webkit-linear-gradient(top, #087508 0%, #00430a 100%);
   background-image: -o-linear-gradient(top, #004400, #00430a);
   background-image: linear-gradient(to bottom, #004400, #00430a);
@@ -4290,7 +4290,7 @@ input[type="submit"].btn.btn-mini {
   border-color: #e5e5e5 #e5e5e5 #bfbfbf;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fff2f2f2', endColorstr='#ffe5e5e5', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);*/
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
      -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.075);
@@ -4306,10 +4306,10 @@ input[type="submit"].btn.btn-mini {
   *background-color: rgba(217,217,217,0);
 }*/
 
-/*.navbar .btn-navbar:active,
+.navbar .btn-navbar:active,
 .navbar .btn-navbar.active {
   background-color: #cccccc \9;
-}*/
+}
 
 .navbar .btn-navbar .icon-bar {
   display: block;
