--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3632,7 +3632,7 @@ input[type="submit"].btn.btn-mini {
 
 .nav > li > a:hover {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #629b63;
 }
 
 .nav > .pull-right {
@@ -4253,9 +4253,10 @@ input[type="submit"].btn.btn-mini {
   margin-top: 8px;
 }
 
+/* colors in navbar */
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  color: #333333;
+  color: #629b63;
   text-decoration: none;
   background-color: transparent;
 }
@@ -4265,7 +4266,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #629b63;
+  background-color: #639c64;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
      -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
           box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
