--- a/css/all.css
+++ b/css/all.css
@@ -48,4 +48,72 @@ body {
 	min-height: 200px;
 	background: rgb(70,104,67);
 	clear: both;
+	border-top: 4px solid #629b63;
+	color: white;
+}
+
+h3#footer {
+	padding-top: 0px;
+}
+
+.important_links {
+	border-left: #629b63 solid 2px;
+	margin-top: 10px;
+	padding-left: 5px;
+}
+
+#title {
+	font-size: 1.25em;
+	margin-bottom: 5px;
+	padding: 0;
+	display: block;
+}
+
+.contact {
+	margin-top: 10px;
+	border-left: #629b63 solid 2px;
+	padding-left: 5px;
+}
+
+#twitter-follow-button {
+	margin-bottom: 5px;
+}
+
+#edited_by {
+	float: right;
+	margin-right: 10%;
+	margin-top: 40px;
+	display: block;
+	clear: both;
+}
+
+.facebook {
+	margin-top: 5px;
+	display: block;
+	background: #e8e8e8;
+	border-radius: 4px;
+	min-width: 225px;
+}
+
+#abt_chrome {
+	width: 400px;
+}
+
+
+#footer_holder {
+	margin-top: 10px;
+}
+
+#edited_by {
+	margin-top: 11px;
+	padding-left: 6px;
+	background: rgb(70,104,67);
+}
+
+#title a {
+	text-decoration: none;
+}
+
+#title a:hover {
+	text-decoration: underline !important;
 }
