--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -944,14 +944,14 @@
     display: none;
   }
   .nav-collapse .nav .nav-header {
-    color: #555555;
+    color: white;
     text-shadow: none;
   }
   .nav-collapse .nav > li > a,
   .nav-collapse .dropdown-menu a {
     padding: 9px 15px;
     font-weight: bold;
-    color: #555555;
+    color: white;
     -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
             border-radius: 3px;
