Fixed the SSIs not working properly Fixed the paper background not loading properly

--- a/css/all.css
+++ b/css/all.css
@@ -29,7 +29,7 @@ html, body {
 }
 
 body {
-	background-image: url(/background.png) !important;
+	background-image: url(../background.png) !important;
 }
 
 #content {
