--- a/harbingernews/css.css
+++ b/harbingernews/css.css
@@ -350,3 +350,63 @@ img#talk_bubble {
 #news_title_row {
 	height: 35px;
 }
+
+#upcoming {
+	background: #bababa;
+	position: relative;
+	padding: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.150);
+	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+	margin-bottom: 10px;
+}
+
+
+#upcoming:before {
+	z-index: -1;
+	position: absolute;
+	top: -2px;
+	left: 0;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: #bababa;
+	border: 1px solid rgba(0, 0, 0, 0.150);
+	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
+	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
+	-webkit-transform: rotate(1deg);
+	-moz-transform: rotate(1deg);
+	-o-transform: rotate(1deg);
+	-ms-transform: rotate(1deg);
+	transform: rotate(1deg)
+}
+
+#upcoming:after {
+	z-index: -2;
+	position: absolute;
+	top: -2px;
+	left: 0;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: #bababa;
+	border: 1px solid rgba(0, 0, 0, 0.150);
+	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
+	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
+	-webkit-transform: rotate(359deg);
+	-moz-transform: rotate(359deg);
+	-o-transform: rotate(359deg);
+	-ms-transform: rotate(359deg);
+	transform: rotate(359deg)
+}
+
+
+#upcoming h2 {
+	font-size: x-large;
+	margin-top: 0;
+	padding-top: px;
+	text-align: center;
+}
