added WOTS article to the homepage

--- a/harbingernews/css.css
+++ b/harbingernews/css.css
@@ -139,6 +139,8 @@ img#talk_bubble {
 	padding-top: 0;
 	margin-top: 11px;
 	line-height: normal !important;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 
 .article {
