--- a/harbingernews/css.css
+++ b/harbingernews/css.css
@@ -218,7 +218,7 @@ img#talk_bubble {
 	position: relative;
 	background: #fff;
 	padding: 10px;
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 	border: 1px solid rgba(0, 0, 0, 0.150);
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
 	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
@@ -378,11 +378,11 @@ img#talk_bubble {
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
 	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
-	-webkit-transform: rotate(1deg);
-	-moz-transform: rotate(1deg);
-	-o-transform: rotate(1deg);
-	-ms-transform: rotate(1deg);
-	transform: rotate(1deg)
+	-webkit-transform: rotate(.5deg);
+	-moz-transform: rotate(.5deg);
+	-o-transform: rotate(.5deg);
+	-ms-transform: rotate(.5deg);
+	transform: rotate(.5deg)
 }
 
 #upcoming:after {
@@ -398,11 +398,11 @@ img#talk_bubble {
 	-webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
 	-moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
 	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.19);
-	-webkit-transform: rotate(359deg);
-	-moz-transform: rotate(359deg);
-	-o-transform: rotate(359deg);
-	-ms-transform: rotate(359deg);
-	transform: rotate(359deg)
+	-webkit-transform: rotate(359.5deg);
+	-moz-transform: rotate(359.5deg);
+	-o-transform: rotate(359.5deg);
+	-ms-transform: rotate(359.5deg);
+	transform: rotate(359.5deg)
 }
 
 
