--- a/harbingernews/css/all.css
+++ b/harbingernews/css/all.css
@@ -21,103 +21,82 @@ bottom of the page.
 
 
 */
-
-
 /* ----  Footer at Bottom ---- */
 html, body {
-	height: 100%;
-}
+  height: 100%; }
 
 body {
-	background-image: url(../background.png) !important;
-}
+  background-image: url(../background.png) !important; }
 
 #content {
-	min-height: 100%;
-	margin-bottom: -200px;
-	clear: both;
-}
+  min-height: 100%;
+  margin-bottom: -200px;
+  clear: both; }
 
 #footer_spacer {
-	height: 200px;
-	clear: both;
-}
+  height: 200px;
+  clear: both; }
 
 #footer {
-	width: 100%;
-	min-height: 200px;
-	background: rgb(70,104,67);
-	clear: both;
-	border-top: 4px solid #629b63;
-	color: white;
-}
+  width: 100%;
+  min-height: 200px;
+  background: #466843;
+  clear: both;
+  border-top: 4px solid #629b63;
+  color: white; }
 
 h3#footer {
-	padding-top: 0px;
-}
+  padding-top: 0px; }
 
 .important_links {
-	border-left: #629b63 solid 2px;
-	margin-top: 10px;
-	padding-left: 5px;
-}
+  border-left: #629b63 solid 2px;
+  margin-top: 10px;
+  padding-left: 5px; }
 
 #title {
-	font-size: 1.25em;
-	margin-bottom: 5px;
-	padding: 0;
-	display: block;
-}
+  font-size: 1.25em;
+  margin-bottom: 5px;
+  padding: 0;
+  display: block; }
 
 .contact {
-	margin-top: 10px;
-	border-left: #629b63 solid 2px;
-	padding-left: 5px;
-}
+  margin-top: 10px;
+  border-left: #629b63 solid 2px;
+  padding-left: 5px; }
 
 #twitter-follow-button {
-	margin-bottom: 5px;
-}
+  margin-bottom: 5px; }
 
 #edited_by {
-	float: right;
-	margin-right: 10%;
-	margin-top: 40px;
-	display: block;
-	clear: both;
-}
+  float: right;
+  margin-right: 10%;
+  margin-top: 40px;
+  display: block;
+  clear: both; }
 
 .facebook {
-	margin-top: 5px;
-	display: block;
-	background: #e8e8e8;
-	border-radius: 4px;
-	min-width: 225px;
-}
+  margin-top: 5px;
+  display: block;
+  background: #e8e8e8;
+  border-radius: 4px;
+  min-width: 225px; }
 
 #abt_chrome {
-	width: 400px;
-}
-
+  width: 400px; }
 
 #footer_holder {
-	margin-top: 10px;
-}
+  margin-top: 10px; }
 
 #edited_by {
-	margin-top: 11px;
-	padding-left: 6px;
-	background: rgb(70,104,67);
-}
+  margin-top: 11px;
+  padding-left: 6px;
+  background: #466843; }
 
 #title a {
-	text-decoration: none;
-}
+  text-decoration: none; }
 
 #title a:hover {
-	text-decoration: underline !important;
-}
+  text-decoration: underline !important; }
 
 #installgcf {
-	display: none;
-}
+  display: none; }
