--- a/harbingernews/scss/homepage.scss
+++ b/harbingernews/scss/homepage.scss
@@ -7,6 +7,14 @@
 
 */
 
+@import "all";
+
+// Variables
+
+$white-ish: #f3f3f3;
+$darkgreen: #416847;
+$lightgreen: #629b63;
+
 /* Phones to Tablets */
 
 @media (max-width: 768px) {
@@ -20,7 +28,9 @@
 	}
 	
 	#forward_button {
-		margin-left: 224px !important;
+		margin: {
+			left: 224px !important;
+		}
 	}
 	
 	#news_title_container {
@@ -50,6 +60,12 @@ body {
 
 }
 
+#content {
+	background: {
+		color: $white-ish;
+	}
+}
+
 a.fancy {
 	color: black;
 }
@@ -60,152 +76,6 @@ a.fancy {
   }
 
 /*-------------*/
-
-#news {
-	z-index: -1;
-	padding: 0px;
-	width: 100%;
-	height: 435px;
-	background: #5e5e5e;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-	margin-bottom: 20px;
-	overflow-x: hidden;
-}
-
-#news_title_container {
-	position: relative;
-	top: 8px;
-	right: 100px;
-	width: 400px;
-	margin: 0 auto;
-}
-
-#news_title {
-	color: white;
-	font-size: 1.7em;
-	display: inline-block;
-	top: -9px;
-	left: 5px;
-	position: relative;
-	font-family: monospace;
-}
-		
-
-img#talk_bubble {
-	height: 25px;
-	width: 25px;
-}
-
-#container_box {
-	width: 720px;
-	height: 375px;
-	margin: 0 auto;
-	margin-top: 0px;
-	overflow-x: hidden;
-}
-
-#outerbox {
-	width: inherit;
-	height: inherit;
-	overflow: hidden;
-}
-
-#innerbox {
-	height: inherit;
-	width: 2100px;
-}
-
-.article {
-	text-align: center;
-	background-color: #d9d9d9;
-	width: 200px;
-	border: 1px solid black;
-	border-radius: 7px;
-	-webkit-border-radius: 7px;
-	-moz-border-radius: 7px;
-	height: 350px;
-	box-shadow: 0px 2px 17px #232323;
-	-webkit-box-shadow: 0px 2px 17px #232323;
-	display: inline;
-	float: left;
-	margin-right: 20px;
-	margin-left: 18px;
-	margin-top: 10px;
-	overflow: hidden;
-	z-index: 2;
-	/*behavior: url(/~alex/Harbinger2/pie/PIE.htc);*/
-	p {
-		padding-top: 0;
-		margin-top: 11px;
-		line-height: normal !important;
-		padding-right: 5px;
-		padding-left: 5px;
-	}
-	img {
-		padding-top: 0;
-		padding-bottom: 0;
-		margin-top: 0;
-		margin-bottom: 0;
-		border: 2px solid grey;
-		box-shadow: 0px 1px 7px 2px black;
-	}
-	h3 {
-		font-size: large !important;
-		line-height: normal !important;
-		padding: {
-			top: 10px;
-			bottom: 7px;
-		}
-		margin: {
-			top: 0px;
-			bottom: 0px;
-		}
-	}
-}
-
-.empty_article {
-	display: block;
-	height: 260px;
-	width: 130px;
-	margin: 0 auto;
-	margin-top: 22px;
-	border-radius: 12px;
-	border: 4px dashed #787878;
-	text-align: center;
-	padding: {
-		left: 10px;
-		right: 10px;
-		top: 40px;
-	}
-	h2 {
-		display: inline;
-		color: #787878;
-		&:hover {
-			text-decoration: underline;
-		}
-	}
-
-} 
-
-#back_button {
-	position: absolute;
-	margin: {
-		top: 165px;
-		left: -21px;
-	}
-	display: none;
-}
-
-#forward_button {
-	position: absolute;
-	margin: {
-		top: 165px;
-		left: 704px;
-	}
-}
-
-/*-------*/
 
 #important_stuff {
 	margin: 0 auto;
