--- a/harbingernews/css/homepage.css
+++ b/harbingernews/css/homepage.css
@@ -32,7 +32,7 @@ body {
 #footer {
   width: 100%;
   min-height: 200px;
-  background: #466843;
+  background-color: #466843;
   clear: both;
   border-top: 4px solid #629b63;
   color: white; }
@@ -92,29 +92,6 @@ body {
   display: none; }
 
 /* Phones to Tablets */
-@media (max-width: 768px) {
-  a {
-    text-decoration: none; }
-
-  #container_box {
-    width: 240px !important; }
-
-  #forward_button {
-    margin-left: 224px !important; }
-
-  #news_title_container {
-    right: 5px !important; }
-
-  #announcements {
-    margin-left: 5px;
-    margin-right: 5px; }
-
-  #important {
-    margin-left: 5px;
-    margin-right: 5px; }
-
-  #news_title {
-    padding-left: 20px; } }
 body {
   background-image: url(background.png);
   width: 100%;
