--- a/harbingernews/css/news.css
+++ b/harbingernews/css/news.css
@@ -1,3 +1,26 @@
+@media (max-width: 768px) {
+  a {
+    text-decoration: none; }
+
+  #container_box {
+    width: 240px !important; }
+
+  #forward_button {
+    margin-left: 224px !important; }
+
+  #news_title_container {
+    right: 5px !important; }
+
+  #announcements {
+    margin-left: 5px;
+    margin-right: 5px; }
+
+  #important {
+    margin-left: 5px;
+    margin-right: 5px; }
+
+  #news_title {
+    padding-left: 20px; } }
 #news {
   z-index: -1;
   padding: 0px;
@@ -140,7 +163,7 @@ body {
 #footer {
   width: 100%;
   min-height: 200px;
-  background: #466843;
+  background-color: #466843;
   clear: both;
   border-top: 4px solid #629b63;
   color: white; }
