--- a/harbingernews/scss/_all.scss
+++ b/harbingernews/scss/_all.scss
@@ -20,7 +20,9 @@ body {
 
 #content {
 	min-height: 100%;
-	margin-bottom: -200px;
+	margin: {
+		bottom: -200px;
+	}
 	clear: both;
 }
 
@@ -32,7 +34,9 @@ body {
 #footer {
 	width: 100%;
 	min-height: 200px;
-	background: rgb(70,104,67);
+	background: {
+		color: rgb(70,104,67);
+	}
 	clear: both;
 	border-top: 4px solid #629b63;
 	color: white;
@@ -42,9 +46,15 @@ body {
 }
 
 .important_links {
-	border-left: #629b63 solid 2px;
-	margin-top: 10px;
-	padding-left: 5px;
+	border: {
+		left: #629b63 solid 2px;
+	}
+	margin: {
+		top: 10px;
+	}
+	padding: {
+		left: 5px;
+	}
 }
 
 #title {
