--- a/harbingernews/scss/_articleSlider.scss
+++ b/harbingernews/scss/_articleSlider.scss
@@ -1,3 +1,38 @@
+@media (max-width: 768px) {
+
+	a {
+		text-decoration: none;
+	}
+
+	#container_box {
+		width: 240px !important;
+	}
+	
+	#forward_button {
+		margin: {
+			left: 224px !important;
+		}
+	}
+	
+	#news_title_container {
+		right: 5px !important;
+	}
+	
+	#announcements {
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+	
+	#important {
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+	
+	#news_title {
+		padding-left: 20px;
+	}
+}
+
 #news {
 	z-index: -1;
 	padding: 0px;
