--- a/harbingernews/css/sports.css
+++ b/harbingernews/css/sports.css
@@ -13,7 +13,8 @@ body {
   display: block;
   width: 98%;
   height: 170px;
-  background-color: red; }
+  background-color: red;
+  box-shadow: 1px 1px 4px black; }
   .sport h2 {
     margin-top: 0px;
     margin-left: 20px;
@@ -40,3 +41,28 @@ body {
     background-color: #dddddd !important;
     color: #629b63;
     text-shadow: 1px 1px 3px white; }
+
+.inner .holder {
+  position: relative;
+  top: 10px;
+  margin: 0 auto;
+  width: 70%;
+  height: 170px;
+  display: none; }
+  .inner .holder h3 {
+    color: white;
+    text-shadow: 2px 2px 2px black; }
+
+.tint {
+  background-color: rgba(255, 255, 255, 0.6); }
+
+.visible {
+  display: block !important; }
+
+/*.faded_text {
+	color: rgba(255,255,255,0.70) !important;
+	text-shadow: 2px 2px 2px rgba(227,227,227,0.50) !important;
+}*/
+.span4 .well {
+  margin-right: 15px;
+  text-align: center; }
