--- a/harbingernews/scss/sports.scss
+++ b/harbingernews/scss/sports.scss
@@ -32,6 +32,7 @@ body {
 	background: {
 		color: red;
 	}
+	box-shadow: 1px 1px 4px black;
 	h2 {
 		margin: {
 			top: 0px;
@@ -40,7 +41,7 @@ body {
 		padding: {
 			top: 0px;
 		}
-		color: white;
+		color: rgba(255,255,255, 1);
 		text-shadow: 2px 2px 2px black;
 	}
 }
@@ -75,5 +76,42 @@ body {
 			color: $lightGreen;
 			text-shadow: 1px 1px 3px white;
 		}
+	}
+}
+
+.inner {
+	.holder {
+		position: relative;
+		top: 10px;
+		margin: 0 auto;
+		width: 70%;
+		height: 170px;
+		display: none;
+		h3 {
+			color: rgba(255,255,255, 1);
+			text-shadow: 2px 2px 2px black;
+		}
+	}
+}
+
+.tint {
+	background-color: rgba(255,255,255,0.6);
+}
+
+.visible {
+	display: block !important;
+}
+
+/*.faded_text {
+	color: rgba(255,255,255,0.70) !important;
+	text-shadow: 2px 2px 2px rgba(227,227,227,0.50) !important;
+}*/
+
+.span4 {
+	.well {
+		margin: {
+			right: 15px;
+		}
+		text-align: center;
 	}
 }
