--- a/harbingernews/scss/sports.scss
+++ b/harbingernews/scss/sports.scss
@@ -85,10 +85,11 @@ body {
 		top: 10px;
 		margin: 0 auto;
 		width: 70%;
-		height: 170px;
+		height: 120px;
 		display: none;
 		h3 {
-			color: rgba(255,255,255, 1);
+			font-size: 2.1em;
+			color: rgba(74,195,98,1);
 			text-shadow: 2px 2px 2px black;
 		}
 	}
@@ -101,11 +102,6 @@ body {
 .visible {
 	display: block !important;
 }
-
-/*.faded_text {
-	color: rgba(255,255,255,0.70) !important;
-	text-shadow: 2px 2px 2px rgba(227,227,227,0.50) !important;
-}*/
 
 .span4 {
 	.well {
