Added more sports, in the correct seasons! Decided on the temporarily final look of the Varsity/Junior Varsity labels Made the V/JV labels links Worked on the positioning of the "recent" box so that it's not quite so out-of-place Fixed the tabs in the navigation bar so that the active tab's background doesn't change on hover and so that the blank tab that's acting as a spacer is undetectable.

--- a/harbingernews/scss/sports.scss
+++ b/harbingernews/scss/sports.scss
@@ -27,6 +27,7 @@ body {
 	}
 	display: block;
 	width: 98%;
+	float: right;
 	// max-width = 852px
 	height: 170px;
 	background: {
@@ -43,6 +44,12 @@ body {
 		}
 		color: rgba(255,255,255, 1);
 		text-shadow: 2px 2px 2px black;
+	}
+	a {
+		&:hover {
+			text-decoration: none;
+			color: #0a8420;
+		}
 	}
 }
 
@@ -67,6 +74,47 @@ body {
 }
 
 .nav-tabs{
+	z-index: 60;
+	.active {
+		a {
+			&:hover {
+				background: {
+					color: white !important;
+				}
+			}
+		}
+		li {
+			&:hover {
+				background: {
+					color: white !important;
+				}
+			}
+		}
+	}
+	#firsttab {
+		&:hover {
+			a {
+				color: white !important;
+				outline-color: white !important;
+				background: {
+					color: white !important;
+				}
+				border: {
+					color: white !important;
+				}
+			}
+			li {
+				color: white !important;
+				outline-color: white !important;
+				background: {
+					color: white !important;
+				}
+				border: {
+					color: white !important;
+				}
+			}
+		}
+	}
 	a {
 		color: $darkGreen;
 		&:hover {
@@ -103,11 +151,17 @@ body {
 	display: block !important;
 }
 
-.span4 {
+#recent_events {
 	.well {
-		margin: {
-			right: 15px;
-		}
+		padding: 0px !important;
+		float: left;
+		width: 94% !important;
 		text-align: center;
+		h3 {
+			margin: {
+				top: 5px;
+				bottom: 5px;
+			}
+		}
 	}
 }
