--- a/harbingernews/css/sports.css
+++ b/harbingernews/css/sports.css
@@ -12,6 +12,7 @@ body {
   margin-bottom: 10px;
   display: block;
   width: 98%;
+  float: right;
   height: 170px;
   background-color: red;
   box-shadow: 1px 1px 4px black; }
@@ -21,6 +22,9 @@ body {
     padding-top: 0px;
     color: white;
     text-shadow: 2px 2px 2px black; }
+  .sport a:hover {
+    text-decoration: none;
+    color: #0a8420; }
 
 #baseball {
   background-image: url("/harbingernews/sports/baseball/background-tile.png");
@@ -35,12 +39,28 @@ body {
   top: 0px;
   background-color: white; }
 
-.nav-tabs a {
-  color: #416847; }
-  .nav-tabs a:hover {
-    background-color: #dddddd !important;
-    color: #629b63;
-    text-shadow: 1px 1px 3px white; }
+.nav-tabs {
+  z-index: 60; }
+  .nav-tabs .active a:hover {
+    background-color: white !important; }
+  .nav-tabs .active li:hover {
+    background-color: white !important; }
+  .nav-tabs #firsttab:hover a {
+    color: white !important;
+    outline-color: white !important;
+    background-color: white !important;
+    border-color: white !important; }
+  .nav-tabs #firsttab:hover li {
+    color: white !important;
+    outline-color: white !important;
+    background-color: white !important;
+    border-color: white !important; }
+  .nav-tabs a {
+    color: #416847; }
+    .nav-tabs a:hover {
+      background-color: #dddddd !important;
+      color: #629b63;
+      text-shadow: 1px 1px 3px white; }
 
 .inner .holder {
   position: relative;
@@ -60,6 +80,11 @@ body {
 .visible {
   display: block !important; }
 
-.span4 .well {
-  margin-right: 15px;
+#recent_events .well {
+  padding: 0px !important;
+  float: left;
+  width: 94% !important;
   text-align: center; }
+  #recent_events .well h3 {
+    margin-top: 5px;
+    margin-bottom: 5px; }
