Fixed the position of the sports tiles on mobile views (centered instead of pulling right)

--- a/harbingernews/css/sports.css
+++ b/harbingernews/css/sports.css
@@ -1,3 +1,9 @@
+@media all and (max-width: 767px) {
+  .sport {
+    float: none !important;
+    margin: 0 auto !important;
+    margin-bottom: 10px !important;
+    width: 97% !important; } }
 body {
   background-color: #f3f3f3 !important; }
 
