Moved the background image and fixed it's reference in the css files.

--- a/harbingernews/css/news.css
+++ b/harbingernews/css/news.css
@@ -149,7 +149,7 @@ html, body {
   margin-right: 0px; }
 
 body {
-  background-image: url(../background.png) !important; }
+  background-image: url("/harbingernews/img/background.png") !important; }
 
 #content {
   min-height: 100%;
