--- a/harbingernews/scss/_all.scss
+++ b/harbingernews/scss/_all.scss
@@ -15,7 +15,7 @@ html, body {
 }
 
 body {
-	background-image: url(../background.png) !important;
+	background-image: url('/harbingernews/img/background.png') !important;
 }
 
 #content {
