--- a/harbingernews/css/sports/sports.css
+++ b/harbingernews/css/sports/sports.css
@@ -1,3 +1,88 @@
+html, body {
+  height: 100%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px; }
+
+body {
+  background-image: url("/harbingernews/img/background.png") !important; }
+
+#content {
+  min-height: 100%;
+  margin-bottom: -200px;
+  clear: both; }
+
+#footer_spacer {
+  height: 200px;
+  clear: both; }
+
+#footer {
+  width: 100%;
+  min-height: 200px;
+  background-color: #466843;
+  clear: both;
+  border-top: 4px solid #629b63;
+  color: white; }
+  #footer h3 {
+    padding-top: 0px; }
+
+.important_links {
+  border-left: #629b63 solid 2px;
+  margin-top: 10px;
+  padding-left: 5px; }
+
+#title {
+  font-size: 1.25em;
+  margin-bottom: 5px;
+  padding: 0;
+  display: block; }
+
+.contact {
+  margin-top: 10px;
+  border-left: #629b63 solid 2px;
+  padding-left: 5px; }
+
+#twitter-follow-button {
+  margin-bottom: 5px; }
+
+#edited_by {
+  float: right;
+  margin-right: 10%;
+  margin-top: 40px;
+  display: block;
+  clear: both; }
+
+.facebook {
+  margin-top: 5px;
+  display: block;
+  background: #e8e8e8;
+  border-radius: 4px;
+  min-width: 225px; }
+
+#abt_chrome {
+  width: 400px; }
+
+#footer_holder {
+  margin-top: 10px; }
+
+#edited_by {
+  margin-top: 11px;
+  padding-left: 6px;
+  background: #466843; }
+
+#title a {
+  text-decoration: none; }
+  #title a:hover {
+    text-decoration: underline !important; }
+
+#installgcf {
+  display: none; }
+
 #baseball {
   background-image: url("/harbingernews/sports/baseball/background-tile.png");
   background-position: center;
