--- a/scss/sports/_sportstiles.scss
+++ b/scss/sports/_sportstiles.scss
@@ -1,6 +1,6 @@
 @mixin backgroundTile($path, $position: center, $repeat: no-repeat) {
 	background: {
-		image: url($path);
+		image: url($path) !important;
 		position: $position;
 		repeat: $repeat;
 	}
@@ -68,4 +68,8 @@
 
 #volleyball {
 	@include backgroundTile('/harbingernews/sports/volleyball/background-tile.png');
+}
+
+#wrestling {
+	@include backgroundTile('/harbingernews/sports/wrestling/background-tile.png');
 }
