--- a/css/all.css
+++ b/css/all.css
@@ -26,7 +26,7 @@ html, body {
   height: 100%; }
 
 body {
-  background-image: url('/harbingernews/img/background.png') !important; }
+  background-image: url(../background.png) !important; }
 
 #content {
   min-height: 100%;
