--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -61,7 +61,7 @@ body {
 	}
 }
 
-#title {
+#footerTitle {
 	font-size: 1.25em;
 	margin-bottom: 5px;
 	padding: 0;
@@ -109,7 +109,7 @@ body {
 	background: rgb(70,104,67);
 }
 
-#title {
+#footerTitle {
 	a {
 		text-decoration: none;
 		&:hover {
