Added CSS3 PIE support to the sports tiles

--- a/css/sports/sports.css
+++ b/css/sports/sports.css
@@ -36,7 +36,7 @@ body {
   margin-top: 10px;
   padding-left: 5px; }
 
-#title {
+#footerTitle {
   font-size: 1.25em;
   margin-bottom: 5px;
   padding: 0;
@@ -75,91 +75,96 @@ body {
   padding-left: 6px;
   background: #466843; }
 
-#title a {
+#footerTitle a {
   text-decoration: none; }
-  #title a:hover {
+  #footerTitle a:hover {
     text-decoration: underline !important; }
 
 #installgcf {
   display: none; }
 
 #baseball {
-  background-image: url("/harbingernews/sports/baseball/background-tile.png");
+  background-image: url("/harbingernews/sports/baseball/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #bbasketball {
-  background-image: url("/harbingernews/sports/basketball/background-tile.png");
+  background-image: url("/harbingernews/sports/basketball/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #bowling {
-  background-image: url("/harbingernews/sports/bowling/background-tile.png");
+  background-image: url("/harbingernews/sports/bowling/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #crosscountry {
-  background-image: url("/harbingernews/sports/track/background-tile.png");
+  background-image: url("/harbingernews/sports/track/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #gbasketball {
-  background-image: url("/harbingernews/sports/basketball/background-tile.png");
+  background-image: url("/harbingernews/sports/basketball/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #fieldhockey {
-  background-image: url("/harbingernews/sports/field_hockey/background-tile.png");
+  background-image: url("/harbingernews/sports/field_hockey/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #golf {
-  background-image: url("/harbingernews/sports/golf/background-tile.png");
+  background-image: url("/harbingernews/sports/golf/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #gymnastics {
-  background-image: url("/harbingernews/sports/gymnastics/background-tile.png");
+  background-image: url("/harbingernews/sports/gymnastics/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #football {
-  background-image: url("/harbingernews/sports/football/background-tile.png");
+  background-image: url("/harbingernews/sports/football/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #softball {
-  background-image: url("/harbingernews/sports/softball/background-tile.png");
+  background-image: url("/harbingernews/sports/softball/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #bswimming {
-  background-image: url("/harbingernews/sports/swimming/background-tile.png");
+  background-image: url("/harbingernews/sports/swimming/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #gswimming {
-  background-image: url("/harbingernews/sports/swimming/background-tile.png");
+  background-image: url("/harbingernews/sports/swimming/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #btennis {
-  background-image: url("/harbingernews/sports/tennis/background-tile.png");
+  background-image: url("/harbingernews/sports/tennis/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #gtennis {
-  background-image: url("/harbingernews/sports/tennis/background-tile.png");
+  background-image: url("/harbingernews/sports/tennis/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #track {
-  background-image: url("/harbingernews/sports/track/background-tile.png");
+  background-image: url("/harbingernews/sports/track/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
 #volleyball {
-  background-image: url("/harbingernews/sports/volleyball/background-tile.png");
+  background-image: url("/harbingernews/sports/volleyball/background-tile.png") !important;
+  background-position: center;
+  background-repeat: no-repeat; }
+
+#wrestling {
+  background-image: url("/harbingernews/sports/wrestling/background-tile.png") !important;
   background-position: center;
   background-repeat: no-repeat; }
 
@@ -189,7 +194,8 @@ body {
   float: right;
   height: 170px;
   background-color: red;
-  box-shadow: 1px 1px 4px black; }
+  box-shadow: 1px 1px 4px black;
+  behavior: url("/harbingernews/pie/PIE.htc"); }
   .sport h2 {
     margin-top: 0px;
     margin-left: 20px;
