Fixed all css/scss to make up for using the bootstrap css without modifications

--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -2,6 +2,13 @@
 	behavior: url('/harbingernews/pie/PIE.htc');
 }
 
+@media (max-width: 767px) {
+	body {
+	    padding-right: 0px !important;
+	    padding-left: 0px !important;
+	}
+}
+
 html, body {
 	height: 100%;
 	padding: {
@@ -120,4 +127,30 @@ body {
 
 #installgcf {
 	display: none;
+}
+
+.navbar-inner {
+	background-color: #466843 !important;
+	background-image: none !important;
+	border-bottom: 4px solid #629b62 !important;
+	a {
+		color: white !important;
+		text-shadow: 0px 1px 0px #717171 !important;
+	}
+	.active {
+		a {
+			background-color: #629b62 !important;
+		}
+	}
+}
+
+.brand {
+	a {
+		text-shadow: 0 1px 0 #ffffff !important;
+	}
+}
+
+.btn-navbar {
+	background-color: #3e5f3b !important;
+	background-image: none !important;
 }
