--- a/css/all.css
+++ b/css/all.css
@@ -53,7 +53,7 @@ h3#footer {
   margin-top: 10px;
   padding-left: 5px; }
 
-#footerTitle {
+#title {
   font-size: 1.25em;
   margin-bottom: 5px;
   padding: 0;
@@ -92,10 +92,10 @@ h3#footer {
   padding-left: 6px;
   background: #466843; }
 
-#footerTitle a {
+#title a {
   text-decoration: none; }
 
-#footerTitle a:hover {
+#title a:hover {
   text-decoration: underline !important; }
 
 #installgcf {
