--- a/css/news.css
+++ b/css/news.css
@@ -136,6 +136,10 @@ img#talk_bubble {
   margin-top: 165px;
   margin-left: 704px; }
 
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px !important;
+    padding-left: 0px !important; } }
 html, body {
   height: 100%;
   padding-top: 0px;
@@ -220,3 +224,20 @@ body {
 
 #installgcf {
   display: none; }
+
+.navbar-inner {
+  background-color: #466843 !important;
+  background-image: none !important;
+  border-bottom: 4px solid #629b62 !important; }
+  .navbar-inner a {
+    color: white !important;
+    text-shadow: 0px 1px 0px #717171 !important; }
+  .navbar-inner .active a {
+    background-color: #629b62 !important; }
+
+.brand a {
+  text-shadow: 0 1px 0 #ffffff !important; }
+
+.btn-navbar {
+  background-color: #3e5f3b !important;
+  background-image: none !important; }
